use flexbox on nav

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,21 +8,19 @@ h1, h2, p, ul, li {
   font-family: sans-serif;
 }
 
-ul.header {
+.header {
   background-color: #111;
-  padding: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  justify-content: flex-start;
 
-  li {
-    display: inline;
-    list-stype-type: none;
-    margin: 0;
-
+  .navigation-button {
     a {
       color: #FFF;
+      padding: 20px;
       font-weight: bold;
       text-decoration: none;
-      padding: 20px;
-      display: inline-block;
     }
   }
 }
