backend talking to frontend

--- a/client/src/stylesheets/index.css
+++ b/client/src/stylesheets/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Gothic+A1");
+/* @import url("https://fonts.googleapis.com/css?family=Gothic+A1");
 .typed-container {
   height: 10em;
   display: flex;
@@ -63,4 +63,10 @@ h1, h2, p, ul, li {
     margin-bottom: 10px; }
 
 .active {
-  background-color: #228B22; }
+  background-color: #228B22; } */
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
