--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,4 +1,9 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: #fff
+  background-color: #fff;
+  padding: 0;
+  margin: 0;
+  background-image: linear-gradient(#FFF68F, white);
+  height: 100vh;
+
 }
